--- a/e-learning-parser/pom.xml
+++ b/e-learning-parser/pom.xml
@@ -47,7 +47,11 @@
             <artifactId>httpclient</artifactId>
             <version>4.5.11</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.4</version>
+        </dependency>
     </dependencies>
 
 </project>
