--- a/e-learning-service/src/main/resources/application.yml
+++ b/e-learning-service/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     url: jdbc:mysql://localhost/elearning?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf8
     username: root
     password:
-    driver-class-name: com.mysql.jdbc.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
     hikari:
       connection-test-query: SELECT 1
       validation-timeout: 6000
