--- a/e-learning-service/pom.xml
+++ b/e-learning-service/pom.xml
@@ -26,6 +26,12 @@
 
     <dependencies>
         <dependency>
+            <groupId>edu.nju</groupId>
+            <artifactId>e-learning-parser</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
