文件名称获取和字符串分词

--- a/e-learning-parser/pom.xml
+++ b/e-learning-parser/pom.xml
@@ -59,6 +59,12 @@
             <artifactId>java-unrar</artifactId>
             <version>1.7.0-8</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.huaban</groupId>
+            <artifactId>jieba-analysis</artifactId>
+            <version>1.0.2</version>
+        </dependency>
     </dependencies>
 
 </project>
