--- a/.gitignore
+++ b/.gitignore
@@ -237,3 +237,4 @@ buildNumber.properties
 # https://github.com/takari/maven-wrapper#usage-without-binary-jar
 .mvn/wrapper/maven-wrapper.jar
 
+~$*.docx
