ignore修改，有个jar包是需要本地打包上去的

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,4 @@
 # Created by .ignore support plugin (hsz.mobi)
-
-!jieba-analysis-1.0.3.jar
-
 ### Java template
 # Compiled class file
 
@@ -241,3 +238,4 @@ buildNumber.properties
 .mvn/wrapper/maven-wrapper.jar
 
 ~$*.docx
+!/e-learning-parser/lib/jieba-analysis-1.0.3.jar
