--- a/e-learning-service/pom.xml
+++ b/e-learning-service/pom.xml
@@ -25,11 +25,11 @@
     </dependencyManagement>
 
     <dependencies>
-        <dependency>
-            <groupId>edu.nju</groupId>
-            <artifactId>e-learning-parser</artifactId>
-            <version>${project.version}</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>edu.nju</groupId>-->
+<!--            <artifactId>e-learning-parser</artifactId>-->
+<!--            <version>${project.version}</version>-->
+<!--        </dependency>-->
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -38,6 +38,12 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-logging</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>cn.hutool</groupId>
