--- a/e-learning-service/src/main/resources/application.yml
+++ b/e-learning-service/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:mysql://47.97.90.30:3306/E-learning?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf8
-    username: E-learning
-    password: E-learning
+    url: jdbc:mysql://123.57.9.228:3306/E-learning?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf8
+    username: root
+    password: root2020
     driver-class-name: com.mysql.cj.jdbc.Driver
     hikari:
       connection-test-query: SELECT 1
