--- a/e-learning-parser/pom.xml
+++ b/e-learning-parser/pom.xml
@@ -67,6 +67,12 @@
             <version>1.0.3</version>
             <scope>system</scope>
         </dependency>
+
+        <dependency>
+            <groupId>net.arnx</groupId>
+            <artifactId>wmf2svg</artifactId>
+            <version>0.9.5</version>
+        </dependency>
     </dependencies>
 
     <build>
