--- a/e-learning-parser/pom.xml
+++ b/e-learning-parser/pom.xml
@@ -73,6 +73,19 @@
             <artifactId>wmf2svg</artifactId>
             <version>0.9.5</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.freehep</groupId>
+            <artifactId>freehep-graphicsio-emf</artifactId>
+            <version>2.4</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.freehep</groupId>
+            <artifactId>freehep-graphicsio-svg</artifactId>
+            <version>2.4</version>
+        </dependency>
+
     </dependencies>
 
     <build>
