--- a/e-learning-parser/pom.xml
+++ b/e-learning-parser/pom.xml
@@ -77,12 +77,12 @@
             <scope>system</scope>
         </dependency>
 
-        <dependency>
-            <groupId>com.huaban</groupId>
-            <artifactId>jacob</artifactId>
-            <systemPath>${project.basedir}/lib/jacob.jar</systemPath>
-            <scope>system</scope>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.huaban</groupId>-->
+<!--            <artifactId>jacob</artifactId>-->
+<!--            <systemPath>${project.basedir}/lib/jacob.jar</systemPath>-->
+<!--            <scope>system</scope>-->
+<!--        </dependency>-->
 
         <dependency>
             <groupId>net.arnx</groupId>
@@ -132,8 +132,8 @@
 
         <dependency>
             <groupId>e-iceblue</groupId>
-            <artifactId>spire.doc</artifactId>
-            <version>2.2.0</version>
+            <artifactId>spire.doc.free</artifactId>
+            <version>2.7.3</version>
         </dependency>
 
     </dependencies>
